# speaker-recognition

./: README.md  dataset.py  dataset_generator.py  mod.py  phrases.txt  pyproject.toml  streamlit.py
.streamlit/: config.toml
examples/: confusion_matrix.py  dataset_example.py  inference.py  metrics.ipynb  train_model.py
metrics/: eer.py
model/: classifier.py  metrics.py  model.py  predictor.py  train_model.py  trainer.py  voice_predictor.py
