[tool.poetry]
name = "speaker-recognition"
version = "0.1.0"
description = ""
authors = [
    "Vyacheslav Chertan <slavakemdev@gmail.com>",
    "Mikhail Rybalkov <erytw@outlook.com>",
    "Oleg Sobolev <lerasimmus229@gmail.com>",
    "Bogdan Panov <bpnsk2303@gmail.com>",
    "Dmitri Avdeev <>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
