[tool.poetry]
name = "speaker-recognition"
version = "0.1.0"
description = ""
authors = [
    "Vyacheslav Chertan <slavakemdev@gmail.com>",
    "Mikhail Rybalkov <erytw@outlook.com>",
    "Oleg Sobolev <lerasimmus229@gmail.com>",
    "Bogdan Panov <bpnsk2303@gmail.com>",
    "Dmitri Avdeev <>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
transformers = "^4.48.3"
datasets = "^3.2.0"
tqdm = "^4.67.1"
torcheval = "^0.0.7"
soundfile = "^0.13.1"
llvmlite = ">=0.40.0"
librosa = "^0.10.2.post1"
matplotlib = "^3.10.0"
noisereduce = "^3.0.3"
plotly = "^6.0.0"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
